@@ -1364,7 +1364,7 @@
 //-- SC_BLOODYLUST
 2303,2000,2000,0,0,7000:14000:21000,30000
 //-- SC_FEINTBOMB
-2304,800,0,5000,0,1000,2000
+2304,1800,0,5000,0,1000,0
 //==========================================
 
 //===== Extra 3rd Class Skills =============
